--- a/aside/asidexamp.html
+++ b/aside/asidexamp.html
@@ -1,6 +1,3 @@
-<aside>
-    <li><a href="">enlace 1</a></li>
-    <li><a href="">enlace 2</a></li>
-    <li><a href="">enlace 3</a></li>
+<aside id="xampp">
 
 </aside>
