--- a/section/git.html
+++ b/section/git.html
@@ -21,8 +21,8 @@
         la
         página.</p>
 
-    <img src="./img/git1.png">
+    <img class="imgsection"src="img/git1.png">
     <br><br>
-    <img src="./img/git2.png">
+    <img class="imgsection" src="img/git2.png">
 
 </section>
