--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="keywords" content="HTML,CSS,PROXMOX">
     <meta name="author" content="Anne Sierra, Jose Ranero, Jenire Perez, Álvaro Saiz">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reto Wiki 1</title>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/estilo.css">
-	<title>Reto Wiki 1</title>
+
     <!-- Bootstrap JQUERY-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -20,106 +21,50 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/estrellas.js"></script>
 
 </head>
 
 <body>
 
+	<!--IMAGENES PLANETAS-->
+    <div id="planetarojo"><img src="img/logos/planetarojo.png"></div>
+    <div id="planetaverde"><img src="img/logos/planetaverde9.png"></div>
+   <div id="planetacrater"><img src="img/logos/planetaverde5.png"></div>
+    <div id="luna2"><img src="img/logos/luna1.png"></div>
+    <div id="planetatierra"><img src="img/logos/planetatierra5.png"></div>
+   <!-- PARTICULAS-->
 	<script src="js/particles.min.js"></script>
 	<script src="js/particulas.js"></script>
       <div id="particles-js"></div>
-      
-<div id="axis2" class="ten">
-<img class="object boomerang multiple" src="img/logos/cohete.png">
-</div>
-
-<div id="axis" class="two">
-    <img class="object van move-left" src="img/logos/gata.png"/>
-</div>
-
+     <!-- COHETE Y GATA-->
+        <div id="axis2" class="ten">
+        <img class="object boomerang multiple" src="img/logos/cohete.png">
+        </div>
+        <div id="axis" class="two">
+            <img class="object van move-left" src="img/logos/gata.png"/>
+        </div>
 
     <header>
-        <nav>
-            <a href="?aside=0&section=0" ><img src="img/logos/proxmoxlogoa.png"></a>
-            <a href="?aside=1&section=2" id="ubuntu"><img src="img/logos/ubuntulogoa.png"></a>
-            <a href="?aside=2&section=3" id="xamp"><img src="img/logos/xamplogoablanco.png"></a>
-            <a href="?aside=3&section=4" id="git"><img src="img/logos/gitlogoablanco.png"></a>
-            <a href="?aside=4&section=6" id="ajustes"><img src="img/logos/ajusteslogo.png" ></a>
+        <nav id="navsup">
+            <a href="?aside=0&section=0" id="proxmox" ><div class="hover"><img src="img/logos/proxmoxlogoaCOLOR.png" > <img class="color" src="img/logos/proxmoxlogoa.png" ></div></a> 
+            <a href="?aside=1&section=2" id="ubuntu"><div class="hover"><img src="img/logos/ubuntulogoaCOLOR.png"><img class="color"src="img/logos/ubuntulogoa.png"></div></a></div> 
+            <a href="?aside=2&section=3" id="xamp"><div class="hover"><img src="img/logos/xampplogoacolor.png"><img class="color"src="img/logos/xamplogoablanco.png"></div></a>
+            <a href="?aside=3&section=4" id="git"><div class="hover"><img src="img/logos/gitlogoablancoCOLOR.png"><img class="color"src="img/logos/gitlogoablanco.png"></div></a>
+            <a href="?aside=4&section=6" id="ajustes"><div class="hover"><img src="img/logos/ajusteslogo.png" ></div></a></div> 
         </nav>
     </header>
 
 
-    <!-- aside-->
+    <!-- Aside-->
     <div id="aside"></div>
      <!-- Section-->
     <div id="section"></div>
-
- 
-     <script>
-         //script aside
-        var aside = getUrlParameter('aside');
-        if (aside == 0) {
-            $('#aside').append('<div include-html="aside/asideproxmox.html"></div>');
-        }
-        if (aside == 1) {
-            $('#aside').append('<div include-html="aside/asideubuntu.html"></div>');
-        }
-        if (aside == 2) {
-            $('#aside').append('<div include-html="aside/asidexamp.html"></div>');
-        }
-        if (aside == 3) {
-            $('#aside').append('<div include-html="aside/asidegit.html"></div>');
-        }
-        if (aside == 4) {
-            $('#aside').append('<div include-html="aside/asidesolucion.html"></div>');
-        }
-            //script section
-        var section = getUrlParameter('section');
-
-        if (section == 0) {
-
-            $('#section').append('<div include-html="section/UsbBooteable.html"></div>');
-        }
-        if (section == 1) {
-
-            $('#section').append('<div include-html="section/proxmox.html"></div>');
-        }
-        if (section == 2) {
-
-            $('#section').append('<div include-html="section/ubuntu.html"></div>');
-        }
-        if (section == 3) {
-
-            $('#section').append('<div include-html="section/xamp.html"></div>');
-        }
-        if (section == 4) {
-
-            $('#section').append('<div include-html="section/git.html"></div>');
-        }
-
-        if (section == 5) {
-
-            $('#section').append('<div include-html="section/versiones.html"></div>');
-        }
-        if (section == 6) {
-
-            $('#section').append('<div include-html="section/lenguajes.html"></div>');
-        }
-        if (section == 7) {
-
-$('#section').append('<div include-html="section/lenguajes.html"></div>');
-}
-
-        includeHTML();
-
-    </script>
-
-
-
+    <script type="text/javascript" src="js/section.js"></script>
+     
     <footer>
         <small>&copy; Copyright 2018. Creado por Anne Sierra, Jose Ranero, Janire Perez y Álvaro Saiz</small>
     </footer>
