--- a/aside/asidegit.html
+++ b/aside/asidegit.html
@@ -1,4 +1,4 @@
 <aside>
-        <li><a href="?aside=3&section=4">Creacion Github</a></li>
-        <li><a href="?aside=3&section=5">Versiones</a></li>
+        <li><a href="?aside=1&section=4">CREACION GITHUB</a></li>
+        <li><a href="?aside=1&section=5">VERSIONES</a></li>
 </aside>
