--- a/section/UsbBooteable.html
+++ b/section/UsbBooteable.html
@@ -7,7 +7,7 @@
         <p> Accedemos a la pagina de PROXMOX :
             <span><a href="https://www.proxmox.com/en/downloads/category/iso-images-pve" target="_blank">https://www.proxmox.com/en/downloads/category/iso-images-pve</a></span>
             y descargamos la versión más reciente. </p>
-        <img src="./img/usbboteable1.png">
+        <img src="img/usbboteable1.png">
         <p>Nos bajamos el programa ETCHER desde su web:</p>
         <span><a href="https://etcher.io/" target="_blank">https://etcher.io/</a></span>
         <p>
@@ -17,5 +17,10 @@
             Una vez instalado, abrimos el programa y seleccionamos la iso del proxmox y la unidad USB
             donde se instalará.
         </p>
-        <img src="./img/usbboteable2.png">
+        <img src="img/usbboteable2.png">
+		
+		
+		
+		
+		
 </section>
