--- a/section/git.html
+++ b/section/git.html
@@ -1,28 +1,61 @@
-<section>    <h1>Manejo de repositorios</h1>
-    <h2>¿Cómo crear un repositorio?</h2>
+ <section>
+ 
+ <h1>GIT Y GITHUB </h1>
+ <article>
+   
+        <p>-Creamos una cuenta en github y desde esa cuenta creamos un nuevo repositorio.</p>
+        <img class="imgsection" src="img/Captura.png">
+		
+        <p>-Creado el repositorio nos saldra las posibles maneras de poder subir nuestros archivos al github </p>
+        <img class="imgsection" src="img/Captura2.png">
+		
+       
+		<p>-Por la web desde github tambien es posible subir archivos</p>
+		        <img class="imgsection" src="img/Captura3.png">
+				
 
-    <p>Para crear un repositorio en GitHub, solo hay que seleccionar el botón “Create a New Repo”, de la barra de
-        her-
-        ramientas, habiendo entrado a GitHub con tu cuenta:</p>
+		
+        <p>-Por el terminal mediante comandos estos son los pasos a seguir:</p>
+	
+		<ul>
+		
+		<li>Instalar el git.</li>
+		
+		<img class="imgsection" src="img/Captura4.png">
+		
+		<li>Vincular nuestro correo a git.</li>
 
-
-
-    <p> Ahora habrá que llenar dos datos:</p>
-    <li> 1. Nombre del repositorio</li>
-    <li> 2. Descripción del repositorio (opcional)</li>
-
-
-
-    <h2>Crear un proyecto</h2>
-    <p>Al crear el repositorio, inmediatamente nos va a llevar a él. Como nuestro proyecto no tiene nada en su
-        interior, no
-        nos va a mostrar más que una ayuda para subir archivos y proyectos.
-        Para crear un proyecto desde cero, habrá que comenzar creando los archivos del mismo y luego subiéndolos a
-        la
-        página.</p>
-
-    <img class="imgsection"src="img/git1.png">
-    <br><br>
-    <img class="imgsection" src="img/git2.png">
-
+			<img class="imgsection" src="img/Captura5.png">
+		
+		
+		<li>Iniciamos y creamos el repositorio dentro del directorio de trabajo.</li>
+		<img class="imgsection" src="img/Captura6.png">
+		
+		<li>Hacemos una copia</li>
+		<img class="imgsection" src="img/Captura7.png">
+		
+		<li>Consolidamos</li>
+		<img class="imgsection" src="img/Captura8.png">
+		
+		<li>Vinculamos a nuestro git (local) el nuevo directorio de trabajo (repositorio creado en la cuenta de GitHub)</li>
+		<img class="imgsection" src="img/Captura9.png">
+		
+		<li>Pasamos el proyecto de Git a GitHub, este comando solo se utilizara el origin master cuando lo usemos por primera vez.
+		Nos pedira usuario y contraseña.</li>
+		<img class="imgsection" src="img/Captura10.png">
+		
+			<li>Para pasar a GitHub modificaciones usaremos solo el push. Pedira usuario y contraseña de nuevo</li>
+		<img class="imgsection" src="img/Captura11.png">
+		
+		<li>Una forma de subir al equipo algo que tengamos en el github seria utilizar el clone.</li>
+		git clone HTTPS:\\--------------------<br>
+		<img class="imgsection" src="img/Captura12.png">
+		
+		<li>Nuestro repositorio quedaria de este modo despues de los comandos realizados para crearlo donde se mostrara tambien los commit realizados por las modificaciones que hagamos.</li>
+		<img class="imgsection" src="img/Captura13.png">
+		
+		</ul>
+ 
+	
+	</article>
 </section>
