--- a/section/lenguajes.html
+++ b/section/lenguajes.html
@@ -1,7 +1,7 @@
 <section>
-    <img src="./img/lenguajes/html.png">
-    <img src="./img/lenguajes/css.png">
-    <img src="./img/lenguajes/js.png">
-    <img src="./img/lenguajes/jquery.png">
-    <img src="./img/lenguajes/bootstrap.png">
+    <img src="img/lenguajes/HTML.png">
+    <img src="img/lenguajes/CSS.png">
+    <img src="img/lenguajes/js.png">
+    <img src="img/lenguajes/JQUERY.png">
+    <img src="img/lenguajes/bootstrap.png">
 </section>
