--- a/section/proxmox.html
+++ b/section/proxmox.html
@@ -5,7 +5,7 @@
     <article>
         <h2> INSTALACION DEL SERVIDOR PROXMOX. </h2>
         <p>•Después de hacer el booteable con la iso de su página oficial elegiremos la primera opción instalar Proxmox VE 
-		Para cualquier duda a la hora de crear el booteable <a href="section/UsbBooteable.html">Pulse aqui.</a></p>
+		</p>
        
 		<img class="imgsection" src="img/proxmox1.png">
 		
@@ -32,5 +32,35 @@
 		
     </article>
 	
+	<br><h2> CURSOS DE PROXMOX</h2><br>
+	
+	<div id="flexsection">
+		
+		<article class="articleflex">
 
+		<h4>INSTALACION PROXMOX</h4>
+		
+		<iframe  src="https://www.youtube.com/embed/Yamf5L-QYR0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		
+		
+		</article>
+		
+		<article class="articleflex">
+
+		<h4>VIRTUALIZACION PROXMOX </h4>
+		
+		<iframe  src="https://www.youtube.com/embed/rOuZn2Af76k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>			
+		
+		</article>
+		
+		<article class="articleflex">
+
+		<h4>CONTENEDOR PROXMOX</h4>
+		
+		<iframe  src="https://www.youtube.com/embed/b1Aiu5Q4ejw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		
+		
+		</article>
+
+		</div>
 </section>
