--- a/section/proxmox.html
+++ b/section/proxmox.html
@@ -5,7 +5,7 @@
     <article>
         <h2> INSTALACION DEL SERVIDOR PROXMOX. </h2>
         <p>•Después de hacer el booteable con la iso de su página oficial elegiremos la primera opción instalar Proxmox VE 
-		</p>
+		Para cualquier duda a la hora de crear el booteable <a href="section/UsbBooteable.html">Pulse aqui.</a></p>
        
 		<img class="imgsection" src="img/proxmox1.png">
 		
